--- a/ui/pantry-ui/src/app/settings/settings.component.html
+++ b/ui/pantry-ui/src/app/settings/settings.component.html
@@ -152,6 +152,12 @@
             </div>
         </mat-tab>
 
+        <mat-tab label="Meals">
+            <div class="tab-content">
+                <app-meal-settings></app-meal-settings>
+            </div>
+        </mat-tab>
+
         <mat-tab label="Weather">
             <div class="tab-content">
                 <app-weather-settings></app-weather-settings>
