--- a/ui/pantry-ui/src/app/product-view/product-view.component.html
+++ b/ui/pantry-ui/src/app/product-view/product-view.component.html
@@ -133,12 +133,25 @@
 
             </mat-card>
 
-            <div *ngIf="product.cookingInstructions && product.cookingInstructions.length > 0">
-                <h3 class="mat-h3 mb-3">Preparation Instructions</h3>
-                <div class="d-flex flex-column gap-3">
-                    <app-recipe-card *ngFor="let instruction of product.cookingInstructions"
-                        [recipe]="toChatRecipe(instruction)" [expanded]="false">
-                    </app-recipe-card>
+            <div>
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h3 class="mat-h3 mb-0">Preparation Instructions</h3>
+                    <a mat-stroked-button color="primary" [routerLink]="['/recipes/create']"
+                        [queryParams]="{'product-id': product.id}">
+                        <mat-icon>add</mat-icon> Add Instruction
+                    </a>
+                </div>
+
+                <div *ngIf="product.cookingInstructions && product.cookingInstructions.length > 0">
+                    <div class="d-flex flex-column gap-3">
+                        <app-recipe-card *ngFor="let instruction of product.cookingInstructions"
+                            [recipe]="toChatRecipe(instruction)" [expanded]="false">
+                        </app-recipe-card>
+                    </div>
+                </div>
+                <div *ngIf="!product.cookingInstructions || product.cookingInstructions.length === 0"
+                    class="text-muted fst-italic">
+                    No preparation instructions found.
                 </div>
             </div>
 
